--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
         "yaddon",
         "ycommercewebservices",
         "yb2bacceleratorstorefront",
-        
+        "ysaporderfulfillment",
         "apparelstore",
         "electronicsstore",
         "powertoolsstore",
