assistedservicestorefront installed on yacceleratorstorefront

--- a/manifest.json
+++ b/manifest.json
@@ -146,6 +146,11 @@
             "template": "yacceleratorstorefront"
         },
         {
+            "addon": "assistedservicestorefront",
+            "storefront": "yacceleratorstorefront",
+            "template": "yacceleratorstorefront"
+        },
+        {
             "addon": "customerticketingaddon",
             "storefront": "yacceleratorstorefront",
             "template": "yacceleratorstorefront"
