--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -181,7 +181,8 @@
 "sapcpicrmreturnorder",
 "sapcpicrmb2breturnorder",
 "sapcpicrmibase",
-"sapcpicrminvoice"
+"sapcpicrminvoice",
+"ECP3561Workaround"
 
    ],   
 "properties": [
