--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,7 @@
         "yaddon",
         "ycommercewebservices",
         "yb2bacceleratorstorefront",
+        "fixCustomerInterceptor",
         "apparelstore",
         "electronicsstore",
         "powertoolsstore",
