--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,9 @@
 {
-    "commerceSuiteVersion": "1905",
+    "commerceSuiteVersion": "2205",
     "useCloudExtensionPack": true,
+	"useConfig": {
+    	"solr": {
+        	"location": "solrcustom"}},       	    
     "extensions": [
         "acceleratorservices",
         "ordermanagementaddon",
